Revert "audio changes done"
This reverts commit 4cdaee03143a775183e8b4c43b5ce6f3c53ab96a.

--- a/public/index.html
+++ b/public/index.html
@@ -11,32 +11,22 @@
   </head>
 
   <body>
-    <audio id="base_layer_always_on" loop>
-      <source src="sounds/new/0_addition to base_synth+sounds.mp3" type="audio/mp3" />
-    </audio>
     <audio id="player" autoplay allow="autoplay">
       <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
-
-    <audio id="performance_1_audio">
-      <source src="sounds/new/1_Performance.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="performance_2_audio">
-      <source src="sounds/new/2_Performance.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="performance_3_audio">
-      <source src="sounds/new/3_Performance.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="addition_1_audio">
-      <source src="sounds/new/1_addition to base_water.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="addition_2_audio">
-      <source src="sounds/new/2_addition to base_breaths.mp3" type="audio/mp3" />
-    </audio>
-    <audio id="addition_3_audio">
-      <source src="sounds/new/3_addition to base.mp3" type="audio/mp3" />
+    <audio id="ground_addition_to_base">
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
 
+    <audio id="performance_of_the_ground">
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="base_layer_always_on" loop>
+      <source src="sounds/new/0_addition to base_synth+sounds.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="hallway_addition_to_base">
+      <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
+    </audio>
     <div id="openingTitle">
       <div id="fullscreenFadeIn"></div>
 
