--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <audio id="base_layer_always_on" loop>
       <source src="sounds/new/0_addition to base_synth+sounds.mp3" type="audio/mp3" />
     </audio>
-    <audio id="player" autoplay allow="autoplay">
+    <audio id="player" autoplay noloop allow="autoplay">
       <source src="sounds/new/0_opening VO.mp3" type="audio/mp3" />
     </audio>
 
@@ -184,7 +184,7 @@
           animation="property: color; dir: alternate; dur: 1800; delay: 50; loop: false; repeat: 1; from: #000000; to: #ffffff; autoplay: false"
         >
         </a-sky>
-        <a-entity position="0 3 0">
+        <a-entity position="0 3.5 0">
           <a-entity camera foo look-controls wasd-controls id="lobbyCam">
             <!-- this is the cursor, the startEvents: click is what triggers transitions in #francis1 #francis2 #francis3-->
             <!-- code taken from this example: https://codepen.io/Perhelion/pen/gOavybJ
